chore: update package.json

--- a/index.ejs
+++ b/index.ejs
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+
+    <link rel="icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" href="/apple-touch-icon152x152.png" sizes="152x152">
+    <link rel="icon" href="/app-icon192x192.png" sizes="192x192" type="image/png">
   </head>
   <body aurelia-app="main" class="mdc-typography">
     <% if (htmlWebpackPlugin.options.metadata.server) { %>
