--- a/index.ejs
+++ b/index.ejs
@@ -10,9 +10,22 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
 
+    <!-- App Icon -->
     <link rel="icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/apple-touch-icon152x152.png" sizes="152x152">
     <link rel="icon" href="/app-icon192x192.png" sizes="192x192" type="image/png">
+
+    <!-- PWA -->
+    <link rel="manifest" href="/manifest.json">
+    <script>
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('./service-worker.js')
+          .then(registration => {
+            console.info('[ServiceWorker] Registered with scope:', registration.scope);
+          })
+        .catch(err => { console.error('[ServiceWorker] Failed to register:', err); });
+      }
+    </script>
   </head>
   <body aurelia-app="main" class="mdc-typography">
     <% if (htmlWebpackPlugin.options.metadata.server) { %>
